<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gl_bg"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/get_started_logo"
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/gllogo"
            android:contentDescription="@null"/>


        <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_grocerylens"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/about_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_text"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/how_it_works"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_it_works"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/how_it_works_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/how_it_works_desc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/progress_badges_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_badges"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"
            android:padding="2dp">

            <TableRow android:background="@android:color/white">
                <TextView
                    android:text="@string/level"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <TextView
                    android:text="@string/required_recipes"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <TextView
                    android:text="@string/badge"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </TableRow>

            <TableRow android:background="@color/white">
                <TextView
                    android:text="@string/_1"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <TextView
                    android:text="@string/_0_9"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <TextView
                    android:text="@string/bronze"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </TableRow>

            <TableRow android:background="@color/white">
                <TextView android:text="@string/_2" android:padding="8dp" android:textColor="@color/black"
                    android:layout_width="0dp" android:layout_weight="1" android:gravity="center"/>
                <TextView android:text="@string/_10_24" android:padding="8dp" android:textColor="@color/black"
                    android:layout_width="0dp" android:layout_weight="1" android:gravity="center"/>
                <TextView android:text="@string/silver" android:padding="8dp" android:textColor="@color/black"
                    android:layout_width="0dp" android:layout_weight="1" android:gravity="center"/>
            </TableRow>

            <TableRow android:background="@color/white">
                <TextView android:text="@string/_3" android:padding="8dp" android:textColor="@color/black"
                    android:layout_width="0dp" android:layout_weight="1" android:gravity="center"/>
                <TextView android:text="@string/_25_49" android:padding="8dp" android:textColor="@color/black"
                    android:layout_width="0dp" android:layout_weight="1" android:gravity="center"/>
                <TextView android:text="@string/gold" android:padding="8dp" android:textColor="@color/black"
                    android:layout_width="0dp" android:layout_weight="1" android:gravity="center"/>
            </TableRow>

            <TableRow android:background="@color/white">
                <TextView android:text="@string/_4" android:padding="8dp" android:textColor="@color/black"
                    android:layout_width="0dp" android:layout_weight="1" android:gravity="center"/>
                <TextView android:text="@string/_50_99" android:padding="8dp" android:textColor="@color/black"
                    android:layout_width="0dp" android:layout_weight="1" android:gravity="center"/>
                <TextView android:text="@string/platinum" android:padding="8dp" android:textColor="@color/black"
                    android:layout_width="0dp" android:layout_weight="1" android:gravity="center"/>
            </TableRow>

            <TableRow android:background="@color/white">
                <TextView android:text="@string/_5" android:padding="8dp" android:textColor="@color/black"
                    android:layout_width="0dp" android:layout_weight="1" android:gravity="center"/>
                <TextView android:text="@string/_100" android:padding="8dp" android:textColor="@color/black"
                    android:layout_width="0dp" android:layout_weight="1" android:gravity="center"/>
                <TextView android:text="@string/diamond" android:padding="8dp" android:textColor="@color/black"
                    android:layout_width="0dp" android:layout_weight="1" android:gravity="center"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@drawable/button_ui"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
