<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gl_bg"
    android:padding="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"/>


        <LinearLayout
            android:id="@+id/recipe_goal_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/card_view"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_your_recipe_goals"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/editRecipeGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="@drawable/card_view"
                android:hint="@string/new_goal"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/updateGoalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_ui"
                android:text="@string/update_your_goal"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/recipe_progress_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/card_view"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_progress"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>



            <TableLayout
                android:id="@+id/recipe_progress_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:layout_marginTop="10dp">


                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:padding="8dp"/>

                </TableRow>



                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipes_viewed"
                        android:textColor="@color/black"
                        android:padding="8dp"/>

                    <TextView
                        android:id="@+id/recipesViewedText"
                        android:text="@string/num_zero"
                        android:textColor="@color/black"
                        android:padding="8dp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipes_saved"
                        android:textColor="@color/black"
                        android:padding="8dp"/>

                    <TextView
                        android:id="@+id/recipeGoalText"
                        android:text="@string/num_zero"
                        android:textColor="@color/black"
                        android:padding="8dp"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/account_management_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/card_view"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_management"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/resetRecipesButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_ui"
                    android:text="@string/reset_your_goal"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/deleteAccountButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/red_button"
                    android:text="@string/delete_account"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/button_ui"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>
