<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gl_bg"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginPage">

    <ImageView
        android:id="@+id/accountLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/gllogo"
        android:contentDescription="@string/grocerylens_logo" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountLogo"
        android:layout_marginTop="65dp"
        android:autofillHints=""
        android:background="@drawable/card_view"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_input"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/card_view"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="#546E7A"
        android:textSize="18sp" />



    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:layout_below="@id/password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundedcorner"
        android:textColor="#FFFFFF"
        android:padding="10dp" />



    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/forgot_password"
        android:textColor="#0000FF"
        android:textSize="18sp" />


    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/roundedcorner"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="18sp"/>

</RelativeLayout>